--- a/website.html
+++ b/website.html
@@ -7,5 +7,6 @@
     </head>
     <body>
         <p>WOOOOOOOOOOOOOOOOOOOOOOO</p>
+        <a href="https://www.google.com/">Buh</a>
     </body>
 </html>
